Kubernetes Assignment 2/nginx-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
spec:
  type: ClusterIP
  selector:
    app: nginx2
  ports:
  - port: 80
    targetPort: 80
